--- a/contact.html
+++ b/contact.html
@@ -6,79 +6,67 @@
     <title>Contact Us - Quenos Technology</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="include.js"></script>
-    <style>
-        .contact-container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 50px 0;
-        }
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("ljXi4mQ51Rat4Ft7J"); // Replace with your EmailJS public key
+            console.log("EmailJS Initialized");
+        })();
 
-        .contact-container h2 {
-            font-size: 2.5em;
-            color: #003366;
-            margin-bottom: 20px;
-            text-align: center;
-        }
+        window.addEventListener('load', function() {
+            console.log("Window loaded");
+            w3.includeHTML();
 
-        .contact-form {
-            background-color: #f9f9f9;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: 0 auto;
-        }
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                console.log("Form submitted");
+                event.preventDefault();
 
-        .contact-form label {
-            display: block;
-            margin-bottom: 10px;
-            font-weight: bold;
-        }
+                // Disable the submit button to prevent multiple submissions
+                document.querySelector('#contact-form button[type="submit"]').disabled = true;
 
-        .contact-form input[type="text"],
-        .contact-form input[type="email"],
-        .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        .contact-form button {
-            background-color: #007BFF;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
-
-        .contact-form button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+                emailjs.sendForm('service_kg3lti8', 'template_grnxdit', this)
+                    .then((response) => {
+                        console.log('SUCCESS!', response.status, response.text);
+                        document.getElementById('response-message').textContent = 'Message sent successfully!';
+                        document.getElementById('response-message').style.color = 'green';
+                        this.reset(); // Clear the form
+                    }, (error) => {
+                        console.error('FAILED...', error);
+                        document.getElementById('response-message').textContent = 'Failed to send the message. Please try again.';
+                        document.getElementById('response-message').style.color = 'red';
+                    })
+                    .finally(() => {
+                        // Re-enable the submit button
+                        document.querySelector('#contact-form button[type="submit"]').disabled = false;
+                    });
+            });
+        });
+    </script>
 </head>
-<body onload="includeHTML()">
+<body>
     <header w3-include-html="header.html"></header>
     <main>
         <div class="contact-container">
-            <h2>Contact Us</h2>
-            <form class="contact-form" action="submit_form.php" method="post">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+            <h1>Contact Us</h1>
+            <form id="contact-form" class="contact-form">
+                <input type="hidden" name="contact_number">
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label for="from_name">Your Name</label>
+                <input type="text" id="from_name" name="from_name" required>
+
+                <label for="to_name">To (Optional)</label>
+                <input type="text" id="to_name" name="to_name">
+
+                <label for="user_email">Your Email</label>
+                <input type="email" id="user_email" name="user_email" required>
 
                 <label for="message">Message</label>
                 <textarea id="message" name="message" rows="6" required></textarea>
 
-                <button type="submit">Submit</button>
+                <button type="submit">Send</button>
             </form>
+            <p id="response-message" role="alert" aria-live="assertive"></p>
         </div>
     </main>
     <footer w3-include-html="footer.html"></footer>
