minor style changes

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         });
     </script>
 </head>
-<body>
+<body class="contact-page">
     <header w3-include-html="header.html"></header>
     <main>
         <div class="contact-container">
