--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="banner">
             <img src="ASILD.png" alt="Quenos Technology Banner">
             <div class="banner-content">
-                <h2>Driving Safety Forward with Machine Learning</h2>
+                <h2>Driving innovation, ensuring safety</h2>
                 <p>Agile Solutions for Functional Safety in Automotive Systems</p>
                 <a href="#" class="cta-button">Learn More</a>
             </div>
