--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="footer-links">
         <a href="about.html">About Us</a>
         <a href="services.html" class="inactive" aria-disabled="true" tabindex="-1">Services</a>
-        <a href="blogpost.html">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="contact.html">Contact</a>
         <a href="mailto:info@quenos.technology">Email Us</a>
     </div>
