--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/blog.css">
     <script src="include.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="config.js"></script>
     <script src="blog.js"></script>
 </head>
 <body onload="includeHTML(); fetchBlogPosts(1);">
