Removed port for strapi

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
                 <a href="blog.html" class="view-all-link">View All Blog Posts</a>
             </div>
         </section>
+        
+        <section class="our-clients-testimonials">
+            <div class="container">
+                <h2>Our Clients Testimonials</h2>
+                <div class="row">
+                    <!-- Our Clients Testimonials content will be dynamically inserted here -->
+                </div>
+            </div>
+        </section>
     </main>
     <footer w3-include-html="footer.html"></footer>
 </body>
