corrected colour styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
         <section class="services">
-            <div class="container">
+            <div class="services-container">
                 <h2>Our Key Services</h2>
                 <div class="services-grid">
                     <div class="service-item">
@@ -74,14 +74,6 @@
             </div>
         </section>
         
-        <section class="our-clients-testimonials">
-            <div class="container">
-                <h2>Our Clients Testimonials</h2>
-                <div class="row">
-                    <!-- Our Clients Testimonials content will be dynamically inserted here -->
-                </div>
-            </div>
-        </section>
     </main>
     <footer w3-include-html="footer.html"></footer>
 </body>
