--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="footer">
     <div class="footer-links">
         <a href="about.html">About Us</a>
         <a href="services.html" class="inactive" aria-disabled="true" tabindex="-1">Services</a>
